--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,6 @@ plugins {
 
 group = "uk.nhs.hee.trainee.details"
 version = "0.13.0"
-sourceCompatibility = "11"
 
 configurations {
   compileOnly {
@@ -69,6 +68,13 @@ jacocoTestReport {
   reports {
     html.required = true
     xml.required = true
+  }
+}
+
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+    vendor = JvmVendorSpec.ADOPTIUM
   }
 }
 
