--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,10 @@ dependencies {
 
   // Amazon SQS
   implementation "io.awspring.cloud:spring-cloud-starter-aws-messaging"
+
+  // JWT
+  implementation "io.jsonwebtoken:jjwt:0.9.1"
+  implementation 'javax.xml.bind:jaxb-api:2.3.1'
 }
 
 checkstyle {
