--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,13 @@ application:
 
 mongock:
   migration-scan-package: uk.nhs.hee.trainee.details.migration
+
+dsp:
+  client-id: ${DSP_CLIENT_ID:}
+  client-secret: ${DSP_CLIENT_SECRET:}
+  redirect-uri: ${DSP_REDIRECT_URI:}
+  par-endpoint: ${DSP_PAR_ENDPOINT:}
+  token:
+    issuer: ${DSP_TOKEN_ISSUER:}
+    audience: ${DSP_TOKEN_AUDIENCE:}
+    signing-key: ${DSP_TOKEN_SIGNING_KEY:}
