--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,3 +33,4 @@ dsp:
     issuer: ${DSP_TOKEN_ISSUER:}
     audience: ${DSP_TOKEN_AUDIENCE:}
     signing-key: ${DSP_TOKEN_SIGNING_KEY:}
+    issue-endpoint: ${DSP_TOKEN_ISSUE_ENDPOINT:}
