--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,8 +30,7 @@ dsp:
   redirect-uri: ${DSP_REDIRECT_URI:}
   par-endpoint: ${DSP_PAR_ENDPOINT:}
   authorize-endpoint: ${DSP_AUTHORIZE_ENDPOINT:}
-  token:
-    issuer: ${DSP_TOKEN_ISSUER:}
-    audience: ${DSP_TOKEN_AUDIENCE:}
-    signing-key: ${DSP_TOKEN_SIGNING_KEY:}
-    issue-endpoint: ${DSP_TOKEN_ISSUE_ENDPOINT:}
+  token-issuer: ${DSP_TOKEN_ISSUER:}
+  token-audience: ${DSP_TOKEN_AUDIENCE:}
+  token-signing-key: ${DSP_TOKEN_SIGNING_KEY:}
+  token-issue-endpoint: ${DSP_TOKEN_ISSUE_ENDPOINT:}
