--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,18 +14,25 @@ logging:
 
 sentry:
   dsn: ${SENTRY_DSN:}
-  environment: ${SENTRY_ENVIRONMENT:local}
+  environment: ${application.environment}
 
 application:
   aws:
     sqs:
       event: ${EVENT_QUEUE_URL:}
+  environment: ${ENVIRONMENT:local}
   signature:
     secret-key: ${SIGNATURE_SECRET_KEY}
     expire-after:  # Minutes
       default: 1440
       uk.nhs.hee.trainee.details.dto.PlacementDto: ${ SIGNATURE_PLACEMENT_EXPIRY:1440 }
       uk.nhs.hee.trainee.details.dto.ProgrammeMembershipDto: ${ SIGNATURE_PROGRAMME_MEMBERSHIP_EXPIRY:1440 }
+
+com:
+  amazonaws:
+    xray:
+      emitters:
+        daemon-address: ${AWS_XRAY_DAEMON_ADDRESS:}
 
 mongock:
   migration-scan-package: uk.nhs.hee.trainee.details.migration
