--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,7 @@ application:
   aws:
     sqs:
       event: ${EVENT_QUEUE_URL:}
+      coj-signed: ${COJ_SIGNED_QUEUE_URL:}
   environment: ${ENVIRONMENT:local}
   signature:
     secret-key: ${SIGNATURE_SECRET_KEY}
