fix: use spring-boot-starter dependency
And allow versioning to be determined automatically.

No changes to simplify configuration to use defaults (e.g. exchange,
routing key) yet, pending Admin team input.

--- a/build.gradle
+++ b/build.gradle
@@ -58,8 +58,7 @@ dependencies {
   implementation "com.amazonaws:aws-xray-recorder-sdk-spring:2.13.0"
 
   // Rabbit MQ
-  implementation "org.springframework.integration:spring-integration-amqp:6.0.5"
-
+  implementation "org.springframework.boot:spring-boot-starter-amqp"
 }
 
 checkstyle {
