--- a/build.gradle
+++ b/build.gradle
@@ -24,18 +24,23 @@ repositories {
 
 dependencyManagement {
   imports {
-    mavenBom("io.awspring.cloud:spring-cloud-aws-dependencies:2.4.4")
+    mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.7"
+    mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:2.4.4"
   }
 }
 
 dependencies {
   // Spring Boot
+  implementation "org.springframework.boot:spring-boot-starter-data-redis"
   implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
   implementation "org.springframework.boot:spring-boot-starter-web"
   implementation "org.springframework.boot:spring-boot-starter-actuator"
   implementation "org.springframework.boot:spring-boot-starter-validation"
 
   testImplementation "org.springframework.boot:spring-boot-starter-test"
+  testImplementation "org.springframework.cloud:spring-cloud-starter-bootstrap"
+  testImplementation "com.playtika.testcontainers:embedded-redis:2.3.2"
+  testImplementation "org.testcontainers:junit-jupiter:1.17.6"
 
   // Lombok
   compileOnly "org.projectlombok:lombok"
