--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,12 @@ spring:
   data:
     mongodb:
       uri: mongodb://${DB_USER:admin}:${DB_PASSWORD:pwd}@${DB_HOST:localhost}:${DB_PORT:27017}/${DB_NAME:trainee}?authSource=admin
+  redis:
+    host: ${REDIS_HOST:localhost}
+    port: ${REDIS_PORT:6379}
+    ssl: ${REDIS_SSL:false}
+    user: ${REDIS_USER:default}
+    password: ${REDIS_PASSWORD:password}
   rabbitmq:
     host: ${TRAINEE_DETAILS_RABBITMQ_HOST}
     port: ${TRAINEE_DETAILS_RABBITMQ_PORT}
@@ -26,6 +32,7 @@ application:
   aws:
     sqs:
       event: ${EVENT_QUEUE_URL:}
+      coj-signed: ${COJ_SIGNED_QUEUE_URL:}
   environment: ${ENVIRONMENT:local}
   rabbit:
     coj-signed:
