feat: robust rabbit extended-edition
This seems like quite a bit of new functionality. We could alternatively
simply log failed messages (or send them to an SQS queue!) to avoid the
scheduling.

TODO: tests

TIS21-4925

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
     username: ${TRAINEE_DETAILS_RABBITMQ_USERNAME}
     password: ${TRAINEE_DETAILS_RABBITMQ_PASSWORD}
     ssl.enabled: ${TRAINEE_DETAILS_RABBITMQ_USE_SSL}
+    publisher-confirm-type: correlated
+    max-retries: 50
 
 logging:
   level:
