feat: CCT calculation validation
Add validation to the CctCalculationDetailDto.

TIS21-6544
TIS21-6623

--- a/src/integrationTest/resources/application-test.yml
+++ b/src/integrationTest/resources/application-test.yml
@@ -14,3 +14,11 @@ application:
 
 mongock:
   enabled: false
+
+spring:
+  cloud:
+    aws:
+      region:
+        static: eu-west-2
+      sqs:
+        enabled: false
