whoops, local env reverted

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,8 +31,8 @@ sentry:
 application:
   aws:
     sns:
-      coj-signed: ${TOPIC_ARN_COJ_SIGNED:afdsa}
-      gmc-details-provided: ${TOPIC_ARN_GMC_DETAILS_PROVIDED:afasss}
+      coj-signed: ${TOPIC_ARN_COJ_SIGNED}
+      gmc-details-provided: ${TOPIC_ARN_GMC_DETAILS_PROVIDED}
     sqs:
       event: ${EVENT_QUEUE_URL:}
       basic-details-update: ${BASIC_DETAILS_UPDATE_QUEUE_URL:}
