feat: feature flags for LTFT
Create a feature flag for LTFT at `GET: /api/features` to return whether
the trainee has a valid programme for LTFT.

Current rules are that the programme must not have ended and must be a
a London or South West programme.

TIS21-6703
TIS21-6908

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,6 +42,13 @@ application:
       personal-info-update: ${PERSONAL_INFO_UPDATE_QUEUE_URL:}
       person-owner-update: ${PERSON_OWNER_UPDATE_QUEUE_URL:}
   environment: ${ENVIRONMENT:local}
+  features:
+    ltft:
+      deaneries:
+        - North West London
+        - North Central and East London
+        - South London
+        - South West
   signature:
     secret-key: ${SIGNATURE_SECRET_KEY}
     expire-after:  # Minutes
