build: upgrade version catalog
Upgrade tis-trainee-version-catalog to 0.0.6.
Refactor PDDocument creation in tests to handle deprecation of
`PDDocument.load()`.

Since version 3.2.0 the Spring Cloud AWS starter for SQS
autoconfigured a message converter, as a result the bean
configured in ApplicationConfiguration is no longer needed.

Upgrade the Gradle wrapper to 8.9.

Enable build scan publishing after PR analysis and CI/CD workflows.

NO-TICKET

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,7 @@ jobs:
     uses: health-education-england/.github/.github/workflows/ci-cd-gradle.yml@main
     with:
       cluster-prefix: trainee
+      publish-build-scan: true
     secrets:
       sonar-token: ${{ secrets.SONAR_TOKEN }}
       reject-pat: ${{ secrets.PAT_REJECT_APPROVALS }}
