--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,7 +2,7 @@ application:
   aws:
     sns:
       coj-signed: ${local.sns-prefix}:tis-trainee-details-coj-signed
-      email-details-provided: ${local.sns-prefix}:tis-trainee-details-email-provided
+      contact-details-provided: ${local.sns-prefix}:tis-trainee-details-contact-provided
       gmc-details-provided: ${local.sns-prefix}:tis-trainee-details-gmc-provided
     sqs:
       event: ${local.sqs-prefix}/
